[gd_scene load_steps=4 format=3 uid="uid://dus46y1w3win3"]

[ext_resource type="Script" uid="uid://dgwx6h0qmxdem" path="res://gameplay/components/email_viewer.gd" id="1_email"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_email"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.85, 0.85, 0.85, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.937, 0.941, 0.945, 1)
border_width_bottom = 1
border_color = Color(0.9, 0.9, 0.9, 1)

[node name="EmailViewer" type="CanvasLayer"]
layer = 50
script = ExtResource("1_email")

[node name="DimBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.5
offset_top = -321.5
offset_right = 440.5
offset_bottom = 321.5
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="EmailPanel" type="Panel" parent="ScrollContainer"]
custom_minimum_size = Vector2(880, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_email")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/EmailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="Panel" parent="ScrollContainer/EmailPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/EmailPanel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/EmailPanel/VBoxContainer/Header/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="ScrollContainer/EmailPanel/VBoxContainer/Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚Üê"

[node name="GmailIcon" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üìß"

[node name="Title" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.25, 0.25, 0.25, 1)
theme_override_font_sizes/font_size = 18
text = "Gmail"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="ScrollContainer/EmailPanel/VBoxContainer/Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚úï"

[node name="EmailContent" type="MarginContainer" parent="ScrollContainer/EmailPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="SubjectLabel" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.13, 0.13, 0.13, 1)
theme_override_font_sizes/font_size = 22
text = "Subject Line Here"
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer"]
layout_mode = 2

[node name="SenderSection" type="VBoxContainer" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FromContainer" type="HBoxContainer" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Avatar" type="Panel" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection/FromContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="AvatarLabel" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection/FromContainer/Avatar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SenderInfo" type="VBoxContainer" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection/FromContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="FromName" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection/FromContainer/SenderInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.13, 0.13, 0.13, 1)
theme_override_font_sizes/font_size = 14
text = "Sender Name"

[node name="FromEmail" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection/FromContainer/SenderInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.45, 0.45, 1)
theme_override_font_sizes/font_size = 13
text = "<sender@email.com>"

[node name="TimeLabel" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection/FromContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.45, 0.45, 1)
theme_override_font_sizes/font_size = 12
text = "12:34 PM"

[node name="ToContainer" type="HBoxContainer" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ToLabel" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection/ToContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.45, 0.45, 1)
theme_override_font_sizes/font_size = 13
text = "to"

[node name="ToValue" type="Label" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/SenderSection/ToContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.45, 0.45, 1)
theme_override_font_sizes/font_size = 13
text = "me"

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer"]
layout_mode = 2

[node name="BodyText" type="RichTextLabel" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.13, 0.13, 0.13, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Email body content goes here..."
fit_content = true
scroll_active = false

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer"]
layout_mode = 2

[node name="ActionButtons" type="HBoxContainer" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="ContinueButton" type="Button" parent="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/ActionButtons"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Continue ‚ûú"

[connection signal="pressed" from="ScrollContainer/EmailPanel/VBoxContainer/Header/MarginContainer/HBoxContainer/BackButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ScrollContainer/EmailPanel/VBoxContainer/Header/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ScrollContainer/EmailPanel/VBoxContainer/EmailContent/VBoxContainer/ActionButtons/ContinueButton" to="." method="_on_continue_pressed"]
